# game_of_life

./: .gitignore  main.py  merger.py  pyproject.toml  scan.py  speed_test.py  speed_test_data.csv  test.py
src/: Box.py  Gol.py  Merger.py  Reader.py
src/plot/: figures.py  tools.py
